# pc2sms

./: CMakeLists.txt  HISTORY  Makefile.am  README.md  config-filename.cpp  configure.ac  daemonize.cpp  deploy.sh  errlist.cpp  errlist.h  pc2sms-config.cpp  pc2sms-config.h  pc2sms.cpp  pc2sms.proto  platform.h  send-sms-config.cpp  send-sms-config.h  send-sms.cpp  service-raw.cpp  service-raw.h  sms-listener.cpp  sms-listener.h  utilstring.cpp  utilstring.h
systemd/: README.daemon.md  install-pc2sms-service.sh  pc2sms.service
tools/: deploy-lib-grpc.sh  deploy-lib.sh  deploy.sh  gen-cpp.bat  gen-cpp.sh  gen-javascript.sh  install-grpc.sh
